Task 3: install zabbix agent2 and configure - group_vars

--- a/002_chrony.conf.j2
+++ b/002_chrony.conf.j2
@@ -10,7 +10,7 @@
 
   - name: deploy chrony.conf template
     template:
-      src: ./templates/chrony.conf
+      src: ./templates/chrony.conf.j2
       dest: /etc/chrony/chrony.conf
       owner: root
       group: root
